--- a/.github/workflows/deploy-ingress.yml
+++ b/.github/workflows/deploy-ingress.yml
@@ -27,6 +27,12 @@ jobs:
 
     - name: Set up gcloud
       uses: google-github-actions/setup-gcloud@v2
+    
+    - name: Set up gcloud CLI
+      uses: google-github-actions/setup-gcloud@v2
+      with:
+          project_id: gcp-despliegue-desarrollo 
+          install_components: 'gke-gcloud-auth-plugin'
 
     - name: Configure kubectl
       run: |
