--- a/.github/workflows/deploy-ingress.yml
+++ b/.github/workflows/deploy-ingress.yml
@@ -9,7 +9,7 @@ env:
   PROJECT_ID:  gcp-despliegue-desarrollo
   CLUSTER_NAME: cluster-desarrollo
   CLUSTER_ZONE: us-central1-c
-  K8S_NAMESPACE: default
+  K8S_DIR: kubernetes
 
 jobs:
   deploy:
@@ -35,4 +35,4 @@ jobs:
 
     - name: Deploy Ingress
       run: |
-        kubectl apply -n $K8S_NAMESPACE -f ingress.yml
+        kubectl apply -f ${{ env.K8S_DIR }}/ingress.yml
